@@ -1,6 +1,6 @@
 package configgen.genbyai;
 
-import org.simdjson.SimdJsonParser;
+import com.alibaba.fastjson2.JSON;
 
 import java.io.IOException;
 import java.nio.file.Files;
@@ -14,24 +14,15 @@ public record AICfg(String baseUrl,
         if (!Files.exists(path)) {
             throw new RuntimeException(cfgFn + " not exist!");
         }
-        byte[] bytes;
+        String jsonStr;
         try {
-            bytes = Files.readAllBytes(path);
+            jsonStr = Files.readString(path);
         } catch (IOException e) {
             throw new RuntimeException(e);
         }
-        if (bytes.length == 0) {
+        if (jsonStr.isEmpty()) {
             throw new RuntimeException(cfgFn + " is empty!");
         }
-        // simdjson 严格 UTF-8 不跳 BOM，剥离可能的 UTF-8 BOM
-        int len = bytes.length;
-        if (len >= 3
-                && (bytes[0] & 0xFF) == 0xEF
-                && (bytes[1] & 0xFF) == 0xBB
-                && (bytes[2] & 0xFF) == 0xBF) {
-            bytes = java.util.Arrays.copyOfRange(bytes, 3, len);
-            len = bytes.length;
-        }
-        return new SimdJsonParser().parse(bytes, len, AICfg.class);
+        return JSON.parseObject(jsonStr, AICfg.class);
     }
 }
